Correct section spacing

--- a/version_control/Codurance_September2020/css/modules/still-have-questions.css
+++ b/version_control/Codurance_September2020/css/modules/still-have-questions.css
@@ -1,5 +1,9 @@
 {% import '../utils/utils.css' as utils %}
 
+.custom-still-have-questions {
+
+}
+
 .custombox-content .field>label {
   display: none;
 }
